--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kenny Nguyen - Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
+    <div class="container">
+        <div class="sidebar">
+            <div class="profile-container">
+                <img src="profile.jpeg" alt="Kenny's photo" class="profile-image">
+                <h1 class="name">Kenny Nguyen</h1>
+                <p class="position">CS BS/MS Student @ ASU</p>
+                <p class="affiliation">ARC Lab</p>
+                <p class="department">School of Computing and Augmented Intelligence</p>
+                <hr class="sidebar-divider">
+                <div class="sidebar-section">
+                    <p class="contact-info"><i class="icon-location"></i> Arizona State University, Tempe Campus</p>
+                    <p class="contact-info"><i class="icon-email"></i> knguy139@asu.edu</p>
+                </div>
+                <hr class="sidebar-divider">
+                <div class="sidebar-section social-links">
+                    <a href="https://github.com/1kennect" target="_blank">GitHub</a>
+                    <a href="#" target="_blank">Google Scholar</a>
+                    <a href="#" target="_blank">LinkedIn</a>
+                    <a href="#" target="_blank">Twitter</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="main-content">
+            <nav class="top-nav">
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#publications">Publications</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+
+            <section id="about">
+                <h2>About</h2>
+                <p>I am an undergraduate student at Arizona State University with broad interests in artificial intelligence, machine learning, and their applications in healthcare and visual reasoning. I am currently collaborating with the Mayo Clinic on interdisciplinary projects and contributing to research that explores new approaches to interpretable AI systems. My work aims to improve the transparency, reliability, and real-world impact of modern AI technologies.</p>
+            </section>
+
+            <section id="publications">
+                <h2>Publications</h2>
+                <p>Research work in progress.</p>
+            </section>
+
+            <section id="recent-updates">
+                <h2>Recent Updates</h2>
+                <div class="update-item">
+                    <p class="update-date">[May 2025]</p>
+                    <p>Ongoing collaboration with Mayo Clinic on AI-driven healthcare projects.</p>
+                </div>
+                <div class="update-item">
+                    <p class="update-date">[Feb 2025]</p>
+                    <p>Contributing to research on interpretable visual reasoning systems, focusing on separating perception and reasoning for more transparent AI.</p>
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <footer>
+        <p>© <span id="current-year">2025</span> Kenny Nguyen. Last updated: <span id="last-updated">May 2025</span></p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
